# prizma

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Prizma_полный_отчет_с_инфографикой.docx  README.md  docker-compose.frontend-server.yml  docker-compose.server.yml  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-vps.yml  deploy.yml
charts/prizma/: Chart.yaml  values-dev.yaml  values-eks.yaml  values-prod.yaml  values-regcloud.yaml  values.yaml
deploy/argocd/: observability.yaml  prizma-backend.yaml  prizma-eks.yaml
deploy/cloudflare/: prizma-api-tunnel.example.yml
deploy/eks/: DNS.md  efs-storageclass.yaml  namespace.yaml  prizma-secrets.example.yaml
deploy/regcloud/: README.md  namespace.yaml  nginx.conf  nginx.frontend-local-backend.conf  prizma-secrets.example.yaml
docs/api/: openapi.json
docs/architecture/: adr-001-public-routing.md
docs/coverage/: requirements-traceability.md
docs/git/: remote-setup.md
docs/mlops/: README.md  model-card.md
docs/product/: backlog.md
docs/runbooks/: incident-response.md  retraining.md  rollback.md
docs/security/: threat-model.md
docs/sre/: slo.md
observability/prometheus/: prizma-rules.yml  prometheus.yml
output/doc/: Prizma_полный_технический_отчет.docx
output/presentation/: Prizma_академическая_защита.pptx
scripts/contracts/: __init__.py  export_openapi.py
scripts/docs/: build_case_report.py
scripts/mlops/: common.py  (+6 more)
tests/: test_api.py  test_contract.py
web/: app.js  index.html  manifest.webmanifest  styles.css
(+37 files in other folders)
