[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prizma-backend"
version = "0.1.0"
description = "Minimal backend and platform skeleton for the Prizma case."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.36",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28",
  "numpy>=2.2",
  "pika>=1.3",
  "pillow>=11.0",
  "prometheus-client>=0.21",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "tritonclient[http]>=2.58",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.8",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
